<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:background="@color/backgroud"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ayu.kaspribadi.Main" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/txt_title_margin_bottom"
            android:drawableTop="@drawable/ic_kas"
            android:drawablePadding="@dimen/img_padding_bottom"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/txt_title"
            android:textColor="@color/font_header"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mulai"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_menu"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:text="@string/mulai"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/pengaturan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_menu"
            android:text="@string/pilihan"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>