<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal|center" >

        <Button
            android:id="@+id/btnTambahIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:background="@drawable/btn_menu"
            android:text="@string/tambah"
            android:textColor="@color/white" />

    </TableRow>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TableRow01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingTop="20dp"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                </RadioGroup>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left" >

                <TextView
                    android:id="@+id/txt_nom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/font"
                    android:text="@string/nominal" />

                <EditText
                    android:id="@+id/textNominal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font"
                    android:text="@string/label" />

                <EditText
                    android:id="@+id/textLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:textColor="@color/font"
                    android:text="@string/deskripsi" />

                <EditText
                    android:id="@+id/textDeskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp" >

                  
                </EditText>
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>